--- a/cuerpo.html
+++ b/cuerpo.html
@@ -23,15 +23,20 @@
 
         <nav class="menu">
             <ul>
-                <li><a href="menuPrincipal.html" onclick="cambiarPag()"><i
-                            class="fas fa-home"></i>&nbsp;&nbsp;Inicio</a></li>
-                <li><a href="sobreMi.html">Sobre mi</a></li>
-                <li><a href="personas.html" onclick="cambiarPag()">Personas</a></li>
-                <li><a href="numeros.html" onclick="cambiarPag()">Números</a></li>
-                <li><a href="#" style="color: rgb(106,35,221); font-style: italic;"><u>Cuerpo</u></a></li>
-                <li><a href=" comoMeSiento.html" onclick="cambiarPag()">¿Cómo me siento?</a></li>
-                <li><a href="formulario.html" onclick="mostrarDatos()"><i
-                            class="fas fa-cogs"></i>&nbsp;&nbsp;Configuración</a></li>
+                <li>
+                    <a onclick="cambiarPag()">
+                        <i class="fas fa-home"></i>&nbsp;&nbsp;Inicio
+                    </a>
+                </li>
+                <li><a onclick="cambiarPag_SobreMi()">Sobre mi</a></li>
+                <li><a onclick="cambiarPag_Personas()">Personas</a></li>
+                <li><a onclick="cambiarPag_Numeros()">Números</a></li>
+                <li class="blocked"><a href="#"><u>Cuerpo</u></a></li>
+                <li><a onclick="cambiarPag_Siento()">¿Cómo me siento?</a></li>
+                <li><a href="formulario.html">
+                        <i class="fas fa-cogs"></i>&nbsp;&nbsp;Configuración
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -48,10 +53,8 @@
 
                 <div class="btn-centrar">
                     <div class="group1">
-                        <a href="menuPrincipal.html" onclick="cambiarPag()">
-                            <button id="volver">
-                            </button>
-                        </a>
+                        <button id="volver" class="boton-menu" onclick="cambiarPag()" value="volver">
+                        </button>
 
                         <button id="btnMsj" onclick="mensaje('IMG/Cuerpo/cabeza.png','Cabeza')">
                             <img src="IMG/Cuerpo/cabeza.png">
