--- a/menuPrincipal.html
+++ b/menuPrincipal.html
@@ -23,16 +23,21 @@
 
         <nav class="menu">
             <ul>
-                <li><a href="#" style="color: rgb(106,35,221); font-style: italic;"><i
-                            class="fas fa-home"></i>&nbsp;&nbsp;<u>Inicio</u></a>
+                <li class="blocked">
+                    <a href="#">
+                        <i class="fas fa-home"></i>&nbsp;&nbsp;<u>Inicio</u>
+                    </a>
                 </li>
-                <li><a href="sobreMi.html" onclick="cambiarPag()">Sobre mi</a></li>
-                <li><a href="personas.html" onclick="cambiarPag()">Personas</a></li>
-                <li><a href="numeros.html" onclick="cambiarPag()">Números</a></li>
-                <li><a href="cuerpo.html" onclick="cambiarPag()">Cuerpo</a></li>
-                <li><a href="comoMeSiento.html" onclick="cambiarPag()">¿Cómo me siento?</a></li>
-                <li><a href="formulario.html" onclick="mostrarDatos()"><i
-                            class="fas fa-cogs"></i>&nbsp;&nbsp;Configuración</a></li>
+                <li><a onclick="cambiarPag_SobreMi()">Sobre mi</a></li>
+                <li><a onclick="cambiarPag_Personas()">Personas</a></li>
+                <li><a onclick="cambiarPag_Numeros()">Números</a></li>
+                <li><a onclick="cambiarPag_Cuerpos()">Cuerpo</a></li>
+                <li><a onclick="cambiarPag_Siento()">¿Cómo me siento?</a></li>
+                <li>
+                    <a href="formulario.html">
+                        <i class="fas fa-cogs"></i>&nbsp;&nbsp;Configuración
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -47,42 +52,32 @@
             <div class="btn-variable">
                 <div class="btn-centrar">
                     <div class="group1">
-                        <a href="sobreMi.html" onclick="cambiarPag()">
-                            <button>
-                                <img src="IMG/MenuPrincipal/sobreMi.png">
-                                <h1>Sobre Mi</h1>
-                            </button>
-                        </a>
+                        <button class="boton-menu" onclick="cambiarPag_SobreMi()" value="sobre-mi">
+                            <img src="IMG/MenuPrincipal/sobreMi.png">
+                            <h1>Sobre Mi</h1>
+                        </button>
 
-                        <a href="personas.html" onclick="cambiarPag()">
-                            <button>
-                                <img src="IMG/MenuPrincipal/personas.png">
-                                <h1>Personas</h1>
-                            </button>
-                        </a>
+                        <button class="boton-menu" onclick="cambiarPag_Personas()" value="personas">
+                            <img src="IMG/MenuPrincipal/personas.png">
+                            <h1>Personas</h1>
+                        </button>
 
-                        <a href="numeros.html" onclick="cambiarPag()">
-                            <button>
-                                <img src="IMG/MenuPrincipal/numeros.png">
-                                <h1>Números</h1>
-                            </button>
-                        </a>
+                        <button class="boton-menu" onclick="cambiarPag_Numeros()" value="numeros">
+                            <img src="IMG/MenuPrincipal/numeros.png">
+                            <h1>Números</h1>
+                        </button>
                     </div>
 
                     <div class="group1">
-                        <a href="cuerpo.html" onclick="cambiarPag()">
-                            <button>
-                                <img src="IMG/MenuPrincipal/cuerpo.png">
-                                <h1>Cuerpo</h1>
-                            </button>
-                        </a>
+                        <button class="boton-menu" onclick="cambiarPag_Cuerpos()" value="cuerpo">
+                            <img src="IMG/MenuPrincipal/cuerpo.png">
+                            <h1>Cuerpo</h1>
+                        </button>
 
-                        <a href="comoMeSiento.html" onclick="cambiarPag()">
-                            <button>
-                                <img src="IMG/MenuPrincipal/comoMeSiento.png">
-                                <h1>¿Cómo me siento?</h1>
-                            </button>
-                        </a>
+                        <button class="boton-menu" onclick="cambiarPag_Siento()" value="como-me-siento">
+                            <img src="IMG/MenuPrincipal/comoMeSiento.png">
+                            <h1>¿Cómo me siento?</h1>
+                        </button>
                     </div>
                 </div>
             </div>
